# pygrade

./: .gitignore  MANIFEST.in  Makefile  setup.cfg
examples/public/: intro_python.ipynb
examples/solutions/: intro_python.ipynb
pygradus/: __init__.py  requirements.txt  settings.toml
