[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[metadata]
name = pygradus
author = Diego Kiedanski
author_email = gradus@kiedanski.com
description = Functions to interact with Gradus backend
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = grading, notebooks
license = MIT
home_page = pygradus.kiedanski.com
project_urls = 
	Issue Tracker = https://github.com/wimglenn/resources-example/issues

[options]
packages = find:
include_package_data = true
install_requires = 
	setuptools
	importlib_resources
	requests
	dynaconf

[bdist_wheel]
universal = 1
